add funciont to display grid images, converter path to orginal path

--- a/MovieTime/MovieTime.csproj
+++ b/MovieTime/MovieTime.csproj
@@ -94,6 +94,7 @@
     <Compile Include="View\DataView.xaml.cs">
       <DependentUpon>DataView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Converter\ImagePath.cs" />
     <Compile Include="View\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -153,6 +154,12 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\loupe.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\grid.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\none.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
