--- a/MovieTime/MovieTime.csproj
+++ b/MovieTime/MovieTime.csproj
@@ -76,8 +76,11 @@
     </ApplicationDefinition>
     <Compile Include="Controller\ControllerMain.cs" />
     <Compile Include="Model\searchPage.cs" />
-    <Compile Include="ViewModel\ViewModelMain.cs" />
     <Page Include="View\DataView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\LabelView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -94,7 +97,9 @@
     <Compile Include="View\DataView.xaml.cs">
       <DependentUpon>DataView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Converter\ImagePath.cs" />
+    <Compile Include="View\LabelView.xaml.cs">
+      <DependentUpon>LabelView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -156,10 +161,10 @@
     <Resource Include="Images\loupe.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Images\none.png" />
+    <Resource Include="Images\grid.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Images\grid.png" />
+    <Resource Include="Images\none.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
